parser.js
module.exports = parse

function parse(input, opts) {
	// Wrap parser.parse to allow specifying the start rule
	// as a shorthand option
	if (!opts) {
		opts = {};
	} else if (typeof opts === 'string') {
		opts = {startRule: opts};
	}
	return parser.parse(input, opts);		// eslint-disable-line no-undef
}
var parser=(function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { script: peg$parsescript, command: peg$parsecommand, argument: peg$parseargument, continuationStart: peg$parsecontinuationStart },
        peg$startRuleFunction  = peg$parsescript,

        peg$c0 = function(statements) {
        	return statements || [];
        },
        peg$c1 = function(head, tail, last) {
        	var statements = [head];
        	var prev = head;
        	map(tail, function (spaceOpSpaceCmd /* , i , cmds */) {
        		setOperator(spaceOpSpaceCmd[0], prev);
        		statements.push(prev = spaceOpSpaceCmd[2]);
        	});

        	if (last) {
        		if (!prev) {
        			debugger;		// eslint-disable-line no-debugger
        		}
        		setOperator(last, prev);
        	}

        	return statements;

        	function setOperator(operator, command) {
        		while (command.next) {
        			command = command.next;
        		}
        		command.control = operator;
        	}
        },
        peg$c2 = function(statement, next) {
        	if (typeof next !== 'undefined' && next) {
        		next = next[1];
        		statement.control = next[0];
        		statement.next = next[1];
        	} else {
        		statement.control = ';';
        		statement.next = null;
        	}
        	return statement;
        },
        peg$c3 = "&&",
        peg$c4 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c5 = "||",
        peg$c6 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c7 = function(operator, statement) {
        	return [operator, statement];
        },
        peg$c8 = { type: "other", description: "a subshell" },
        peg$c9 = "(",
        peg$c10 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c11 = ")",
        peg$c12 = { type: "literal", value: ")", description: "\")\"" },
        peg$c13 = function(statements) {
        	return {
        		type: 'subshell',
        		statements: statements
        	};
        },
        peg$c14 = { type: "other", description: "a single command" },
        peg$c15 = function(pre, name, post, pipe) {
        	var command = {
        		type: 'command',
        		command: name,
        		args: [],
        		redirects: [],
        		env: {},
        		control: ';',
        		next: null
        	};

        	map(pre, first).concat(map(post, second)).forEach(function (token) {
        		if (!token || !token.type) {
        			return;
        		}
        		switch (token.type) {
        			case 'moveFd':
        			case 'duplicateFd':
        			case 'redirectFd':
        				return command.redirects.push(token);
        			case 'variableAssignment':
        				command.env[token.name] = token.value;
        				return token.value;
        			default:
        				command.args.push(token);
        		}
        	});

        	if (pipe) {
        		command.redirects.push(pipe[1]);
        	}

        	return command;
        },
        peg$c16 = function(test) {
        	return test;
        },
        peg$c17 = { type: "other", description: "an if/elif/else statement" },
        peg$c18 = "if",
        peg$c19 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c20 = "then",
        peg$c21 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c22 = "else",
        peg$c23 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c24 = "fi",
        peg$c25 = { type: "literal", value: "fi", description: "\"fi\"" },
        peg$c26 = function(test, body, elifBlocks, elseBody) {
        	return {
        		type: 'ifElse',
        		test: test,
        		body: body,
        		elifBlocks: elifBlocks.length ? elifBlocks : null,
        		elseBody: elseBody ? elseBody[1] : null
        	};
        },
        peg$c27 = "elif",
        peg$c28 = { type: "literal", value: "elif", description: "\"elif\"" },
        peg$c29 = function(test, body) {
        	return {
        		type: 'ifElse',
        		test: test,
        		body: body
        	};
        },
        peg$c30 = { type: "other", description: "a while/until loop" },
        peg$c31 = "while",
        peg$c32 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c33 = "until",
        peg$c34 = { type: "literal", value: "until", description: "\"until\"" },
        peg$c35 = "do",
        peg$c36 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c37 = "done",
        peg$c38 = { type: "literal", value: "done", description: "\"done\"" },
        peg$c39 = function(kind, test, body) {
        	return {
        		type: kind + 'Loop',
        		test: test,
        		body: body
        	};
        },
        peg$c40 = { type: "other", description: "a for loop" },
        peg$c41 = "for",
        peg$c42 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c43 = "in",
        peg$c44 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c45 = ";",
        peg$c46 = { type: "literal", value: ";", description: "\";\"" },
        peg$c47 = "\n",
        peg$c48 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c49 = function(loopVar, subjects, body) {
        	return {
        		type: 'forLoop',
        		loopVariable: loopVar,
        		subjects: subjects[1].map(second),
        		body: body
        	};
        },
        peg$c50 = { type: "other", description: "time builtin" },
        peg$c51 = "time",
        peg$c52 = { type: "literal", value: "time", description: "\"time\"" },
        peg$c53 = "-",
        peg$c54 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c55 = /^[a-z]/,
        peg$c56 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c57 = function(flags, statements) {
        	return {
        		type: 'time',
        		flags: flags,
        		command: statements
        	};
        },
        peg$c58 = { type: "other", description: "declare builtin" },
        peg$c59 = "declare",
        peg$c60 = { type: "literal", value: "declare", description: "\"declare\"" },
        peg$c61 = "typeset",
        peg$c62 = { type: "literal", value: "typeset", description: "\"typeset\"" },
        peg$c63 = /^[^\n]/,
        peg$c64 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c65 = { type: "other", description: "a variable assignment" },
        peg$c66 = "=",
        peg$c67 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c68 = function(name, value) {
        	return {type: 'variableAssignment', name: name, value: value};
        },
        peg$c69 = { type: "other", description: "command name" },
        peg$c70 = function(name) {
        	return name;
        },
        peg$c71 = "[[",
        peg$c72 = { type: "literal", value: "[[", description: "\"[[\"" },
        peg$c73 = "[",
        peg$c74 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c75 = { type: "other", description: "command argument" },
        peg$c76 = { type: "other", description: "concatenation of strings and/or variables" },
        peg$c77 = function(pieces) {
        	return flattenConcatenation(pieces);
        },
        peg$c78 = { type: "other", description: "equal" },
        peg$c79 = "#",
        peg$c80 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c81 = { type: "other", description: "bareword" },
        peg$c82 = function(cs) {
        	return literal(cs);
        },
        peg$c83 = "\\",
        peg$c84 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c85 = function(chr) { return chr },
        peg$c86 = { type: "any", description: "any character" },
        peg$c87 = /^[$"';&<>\n()[*?|` ]/,
        peg$c88 = { type: "class", value: "[$\"';&<>\\n()\\[*?|` ]", description: "[$\"';&<>\\n()\\[*?|` ]" },
        peg$c89 = "*",
        peg$c90 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c91 = "?",
        peg$c92 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c93 = function() {
        	return {
        		type: 'glob',
        		value: text()
        	};
        },
        peg$c94 = "]",
        peg$c95 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c96 = "$",
        peg$c97 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c98 = "{",
        peg$c99 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c100 = "}",
        peg$c101 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c102 = "'",
        peg$c103 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c104 = /^[^']/,
        peg$c105 = { type: "class", value: "[^']", description: "[^']" },
        peg$c106 = function(inner) {
        	return literal(inner);
        },
        peg$c107 = "\"",
        peg$c108 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c109 = function(contents) {
        	var pieces = contents.map(function (it) {
        		return isArray(it) ? literal(it) : it;
        	});

        	return flattenConcatenation(pieces);
        },
        peg$c110 = "\\\\",
        peg$c111 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c112 = function() { return '\\' },
        peg$c113 = "`",
        peg$c114 = { type: "literal", value: "`", description: "\"`\"" },
        peg$c115 = function(name) {
        	return {type: 'variable', name: name};
        },
        peg$c116 = /^[a-zA-Z0-9_]/,
        peg$c117 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c118 = function() {
        	return text();
        },
        peg$c119 = "${",
        peg$c120 = { type: "literal", value: "${", description: "\"${\"" },
        peg$c121 = /^[^}]/,
        peg$c122 = { type: "class", value: "[^}]", description: "[^}]" },
        peg$c123 = function(expr) {
        	return {
        		type: 'variableSubstitution',
        		/* eslint-disable no-warning-comments */
        		expression: join(expr) // TODO subParser
        		/* eslint-enable no-warning-comments */
        	};
        },
        peg$c124 = "$(",
        peg$c125 = { type: "literal", value: "$(", description: "\"$(\"" },
        peg$c126 = function(commands) {
        	return {
        		type: 'commandSubstitution',
        		commands: commands
        	};
        },
        peg$c127 = function(input) {
        	return {
        		type: 'commandSubstitution',
        		commands: parse(input.join(''))
        	};
        },
        peg$c128 = "\\`",
        peg$c129 = { type: "literal", value: "\\`", description: "\"\\\\`\"" },
        peg$c130 = function() { return '`' },
        peg$c131 = /^[<>]/,
        peg$c132 = { type: "class", value: "[<>]", description: "[<>]" },
        peg$c133 = function(rw, commands) {
        	return {
        		type: 'processSubstitution',
        		readWrite: rw,
        		commands: commands
        	};
        },
        peg$c134 = "<&",
        peg$c135 = { type: "literal", value: "<&", description: "\"<&\"" },
        peg$c136 = ">&",
        peg$c137 = { type: "literal", value: ">&", description: "\">&\"" },
        peg$c138 = function(fd, op, dest) {
        	if (fd === null) {
        		fd = op[0] === '<' ? 0 : 1;
        	}
        	return {
        		type: 'moveFd',
        		fd: fd,
        		op: op,
        		dest: dest
        	};
        },
        peg$c139 = function(src, op, dest) {
        	if (src === null) {
        		src = op[0] === '<' ? 0 : 1;
        	}
        	return {
        		type: 'duplicateFd',
        		srcFd: src,
        		op: op,
        		destFd: dest
        	};
        },
        peg$c140 = function(fd, op, filename) {
        	if (fd === null) {
        		fd = op[0] === '<' ? 0 : 1;
        	}
        	return {
        		type: 'redirectFd',
        		fd: fd,
        		op: op,
        		filename: filename
        	};
        },
        peg$c141 = ">|",
        peg$c142 = { type: "literal", value: ">|", description: "\">|\"" },
        peg$c143 = ">>",
        peg$c144 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c145 = "&>>",
        peg$c146 = { type: "literal", value: "&>>", description: "\"&>>\"" },
        peg$c147 = "&>",
        peg$c148 = { type: "literal", value: "&>", description: "\"&>\"" },
        peg$c149 = "<",
        peg$c150 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c151 = ">",
        peg$c152 = { type: "literal", value: ">", description: "\">\"" },
        peg$c153 = /^[0-9]/,
        peg$c154 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c155 = function(digits) { return parseInt(join(digits), 10) },
        peg$c156 = "&",
        peg$c157 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c158 = function(op) {
        	return op === '\n' ? ';' : op;
        },
        peg$c159 = "|",
        peg$c160 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c161 = function(command) {
        	return {type: 'pipe', command: command};
        },
        peg$c162 = { type: "other", description: "whitespace" },
        peg$c163 = " ",
        peg$c164 = { type: "literal", value: " ", description: "\" \"" },
        peg$c165 = "\t",
        peg$c166 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c167 = { type: "other", description: "a comment" },
        peg$c168 = "case",
        peg$c169 = { type: "literal", value: "case", description: "\"case\"" },
        peg$c170 = "esac",
        peg$c171 = { type: "literal", value: "esac", description: "\"esac\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsescript() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsespaceNL();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsespaceNL();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsestatementList();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatementList() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parsestatement();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsecontrolOperator();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$parsespaceNL();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parsespaceNL();
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parsestatement();
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsecontrolOperator();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsespaceNL();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsespaceNL();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsestatement();
              if (s6 !== peg$FAILED) {
                s4 = [s4, s5, s6];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsespace();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsespace();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsecontrolOperator();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsespaceNL();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parsespaceNL();
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s1, s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parsesubshell();
      if (s1 === peg$FAILED) {
        s1 = peg$parsebashExtensions();
        if (s1 === peg$FAILED) {
          s1 = peg$parsecommand();
          if (s1 === peg$FAILED) {
            s1 = peg$parsevariableAssignment();
            if (s1 === peg$FAILED) {
              s1 = peg$parseifBlock();
              if (s1 === peg$FAILED) {
                s1 = peg$parseconditionalLoop();
                if (s1 === peg$FAILED) {
                  s1 = peg$parseforLoop();
                }
              }
            }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = [];
        s4 = peg$parsespace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsespace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsechainedStatement();
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsechainedStatement() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c5) {
          s1 = peg$c5;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsespaceNL();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsespaceNL();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsestatement();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsesubshell() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c9;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsespace();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsespace();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsestatementList();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsespace();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsespace();
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c11;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c12); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c13(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      return s0;
    }

    function peg$parsecommand() {
      var s0, s1, s2, s3, s4, s5, s6;
